Updated HTML file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="message my-chat">
                 <div class="message-sender">Anna</div>
-                <div class="message-text">Hiii Mike, I'm alright. How about you?</div>
+                <div class="message-text">Hiii Mike!, I'm alright. How about you?</div>
                 <div class="message-timestamp">8:20pm</div>
             </div>
         </div>
